apps/production/client-sites/jim-ballester/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jim-ballester
  namespace: lulo-demo-landings
  labels:
    app: jim-ballester
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jim-ballester
  template:
    metadata:
      labels:
        app: jim-ballester
        name: jim-ballester
    spec:
      containers:
      - name: jim-ballester
        image: "registry.yesidlopez.de/jim-ballester:v0.0.1" # {"$imagepolicy": "lulo-demo-landings:jim-ballester"}
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "300m"
      imagePullSecrets:
        - name: registry-secret
