apps/production/client-sites/jim-ballester/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jim-ballester
  name: jim-ballester
  namespace: lulo-demo-landings
spec:
  selector:
    app: jim-ballester
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
