apps/production/client-sites/jim-ballester/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jim-ballester
  namespace: lulo-demo-landings
  annotations:
    cert-manager.io/cluster-issuer: luloai-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/target: homelab.luloai.com
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - jim-ballester.demo.luloai.com
      secretName: jim-ballester-tls
  rules:
    - host: jim-ballester.demo.luloai.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jim-ballester
                port:
                  number: 3000
